best-practices-k8s/require_ro_rootfs/require_ro_rootfs.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
    name: require-ro-rootfs
    annotations:
        policies.kyverno.io/title: Require Read-Only Root Filesystem
        policies.kyverno.io/category: Best Practices, EKS Best Practices
        policies.kyverno.io/severity: medium
        policies.kyverno.io/subject: Pod
        kyverno.io/kyverno-version: 1.14.1
        policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,iso27001,nsa-cisa,nist-800-53"
        policies.nirmata.io/nsa-cisa-control: "Sec.1.2"
        policies.nirmata.io/nist-800-53-control: "CM-7,SI-7"
        policies.kyverno.io/description: >-
            A read-only root file system helps to enforce an immutable infrastructure strategy; the container only needs to write on the mounted volume that persists the state. An immutable root filesystem can also prevent malicious binaries from writing to the host system. This policy validates that containers define a securityContext with `readOnlyRootFilesystem: true`.
spec:
    validationActions:
        - Deny
    evaluation:
        background:
            enabled: true
    matchConstraints:
        resourceRules:
            - apiGroups: [""]
              apiVersions: ["v1"]
              resources: ["pods"]
              operations: ["CREATE", "UPDATE"]
    validations:
        - expression: "object.spec.containers.all(c, has(c.securityContext) && has(c.securityContext.readOnlyRootFilesystem) && c.securityContext.readOnlyRootFilesystem == true)"
          message: "Root filesystem must be read-only."
